--- a/config/database.yml
+++ b/config/database.yml
@@ -1,7 +1,7 @@
 development:
   adapter: postgresql
   encoding: utf8
-  database: example_development
+  database: triage_development
   pool: 5
   host: localhost
   # username: root
@@ -10,7 +10,7 @@ development:
 test:
   adapter: postgresql
   encoding: utf8
-  database: example_test
+  database: triage_test
   pool: 5
   host: localhost
   # username: root
@@ -18,7 +18,7 @@ test:
 production:
   adapter: postgresql
   encoding: utf8
-  database: example_production
+  database: triage_production
   pool: 5
   host: localhost
   # username: root
