--- a/test/fixtures/issues.yml
+++ b/test/fixtures/issues.yml
@@ -1,13 +1,15 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
-
-one:
-  comment_count: 1
-  url: MyString
-  last_touched_at: 2012-05-18 16:37:45
+issue_one:
+  id: 1
+  comment_count: 
+  url: https://api.github.com/repos/bemurphy/issue_triage_sandbox/issues/1
+  repo_name: 
+  user_name: 
+  last_touched_at: 2012-11-10 22:20:24.000000000 Z
   number: 1
+  created_at: 2012-11-10 23:23:45.281189000 Z
+  updated_at: 2012-11-10 23:23:45.281189000 Z
+  repo_id: 3
+  title: first test issue
+  html_url: https://github.com/bemurphy/issue_triage_sandbox/issues/1
+  state: open
 
-two:
-  comment_count: 1
-  url: MyString
-  last_touched_at: 2012-05-18 16:37:45
-  number: 1
