--- a/test/fixtures/repos.yml
+++ b/test/fixtures/repos.yml
@@ -1,9 +1,8 @@
-# Read about fixtures at http://api.rubyonrails.org/classes/ActiveRecord/Fixtures.html
+issue_triage_sandbox:
+  id: 1
+  name: issue_triage_sandbox
+  user_name: bemurphy
+  created_at: 2012-11-10 21:50:48.351554000 Z
+  updated_at: 2012-11-10 21:50:48.351554000 Z
+  issues_count: 1
 
-one:
-  name: MyString
-  user_name: MyString
-
-two:
-  name: MyString
-  user_name: MyString
