--- a/test/fixtures/repos.yml
+++ b/test/fixtures/repos.yml
@@ -5,4 +5,5 @@ issue_triage_sandbox:
   created_at: 2012-11-10 21:50:48.351554000 Z
   updated_at: 2012-11-10 21:50:48.351554000 Z
   issues_count: 1
+  language: Ruby
 
