--- a/test/fixtures/repos.yml
+++ b/test/fixtures/repos.yml
@@ -2,6 +2,7 @@ issue_triage_sandbox:
   id: 1
   name: issue_triage_sandbox
   user_name: bemurphy
+  language: ruby
   created_at: 2012-11-10 21:50:48.351554000 Z
   updated_at: 2012-11-10 21:50:48.351554000 Z
   issues_count: 1
