--- a/config/database.yml
+++ b/config/database.yml
@@ -4,7 +4,7 @@ development:
   database: triage_development
   pool: 5
   host: localhost
-  # username: root
+  username: neil
 
 
 test:
@@ -13,7 +13,7 @@ test:
   database: triage_test
   pool: 5
   host: localhost
-  username: postgres
+  username: neil
 
 production:
   adapter: postgresql
