--- a/test/fixtures/repos.yml
+++ b/test/fixtures/repos.yml
@@ -7,3 +7,11 @@ issue_triage_sandbox:
   updated_at: 2012-11-10 21:50:48.351554000 Z
   issues_count: 1
 
+rails_rails:
+  id: 2
+  user_name: rails
+  name: rails
+  language: ruby
+  created_at: 2012-11-10 21:50:48.351554000 Z
+  updated_at: 2012-11-10 21:50:48.351554000 Z
+  issues_count: 0
