Added favorite languages selection, only Repos of favorite languages will be shown
Added ar_pg_array to add favorite_languages array inside User
Changed repo list to return all repos if user doesn't have favorite_languages

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -20,6 +20,7 @@ mockstar:
   admin:
   name: Mock Star
   private: false
+  favorite_languages: [ "ruby" ]
 schneems:
   id: 2
   email: richard.schneeman@gmail.com
