--- a/test/fixtures/repos.yml
+++ b/test/fixtures/repos.yml
@@ -15,3 +15,12 @@ rails_rails:
   created_at: 2012-11-10 21:50:48.351554000 Z
   updated_at: 2012-11-10 21:50:48.351554000 Z
   issues_count: 0
+
+node:
+  id: 3
+  user_name: joyent
+  name: node
+  language: javascript
+  created_at: 2012-11-10 21:50:48.351554000 Z
+  updated_at: 2012-11-10 21:50:48.351554000 Z
+  issues_count: 0
