--- a/config/database.yml
+++ b/config/database.yml
@@ -1,11 +1,12 @@
 development:
-  adapter: postgresql
+  adapter: mysql2
   encoding: utf8
+  reconnect: false
   database: triage_development
   pool: 5
+  username: root
+  password:
   host: localhost
-  # username: root
-
 
 test:
   adapter: postgresql
