--- a/test/vcr_cassettes/repo_info_error.yml
+++ b/test/vcr_cassettes/repo_info_error.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.github.com/repos/codetriage/codetriage?
+    uri: https://api.github.com/repos/codetriage/codetriage
     body:
       encoding: US-ASCII
       string: ''
@@ -39,6 +39,5 @@ http_interactions:
     body:
       encoding: US-ASCII
       string: ! '{"message":"API Rate Limit Exceeded for 5.63.147.100"}'
-    http_version: 
+    http_version:
   recorded_at: Sat, 09 Feb 2013 08:02:19 GMT
-recorded_with: VCR 2.3.0
