--- a/test/fixtures/repos.yml
+++ b/test/fixtures/repos.yml
@@ -1,7 +1,8 @@
 issue_triage_sandbox:
   id: 1
-  name: issue_triage_sandbox
   user_name: bemurphy
+  name: issue_triage_sandbox
+  full_name: bemurphy/issue_triage_sandbox
   language: ruby
   created_at: 2012-11-10 21:50:48.351554000 Z
   updated_at: 2012-11-10 21:50:48.351554000 Z
@@ -11,6 +12,7 @@ rails_rails:
   id: 2
   user_name: rails
   name: rails
+  full_name: rails/rails
   language: ruby
   created_at: 2012-11-10 21:50:48.351554000 Z
   updated_at: 2012-11-10 21:50:48.351554000 Z
@@ -20,6 +22,7 @@ node:
   id: 3
   user_name: joyent
   name: node
+  full_name: joyent/node
   language: javascript
   created_at: 2012-11-10 21:50:48.351554000 Z
   updated_at: 2012-11-10 21:50:48.351554000 Z
