Use bundler version 1.5.1 on travis
- Travis is giving errors with Ruby 2.1
  https://travis-ci.org/codetriage/codetriage/builds/15980297
- Upgrading bundler version solves this issue https://github.com/bundler/bundler/issues/2780

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ rvm:
   - 2.1.0
 script:
   - RAILS_ENV=test bundle exec rake --trace db:migrate test
+before_install: gem install bundler -v=1.5.1
 before_script:
   - cp config/database.example.yml config/database.yml
   - psql -c 'create database triage_test;' -U postgres
