--- a/test/fixtures/language_subscriptions.yml
+++ b/test/fixtures/language_subscriptions.yml
@@ -4,8 +4,10 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
-# column: value
-#
-two: {}
-#  column: value
+schneems_to_ruby:
+  user: schneems
+  language: "ruby"
+  last_sent_at:
+  email_limit: 2
+  created_at: 2013-10-29 21:09:48.351554000 Z
+  updated_at: 2013-10-29 21:09:48.351554000 Z
