--- a/app.json
+++ b/app.json
@@ -16,7 +16,7 @@
     "heroku-redis:in-dyno",
     "memcachier"
   ],
-  "stack": "cedar-14",
+  "stack": "heroku-16",
   "buildpacks": [
     {
       "url": "https://github.com/mojodna/heroku-buildpack-jemalloc.git#v3.6.0"
