--- a/app/views/universities/picking_a_repo.md.erb.yaml
+++ b/app/views/universities/picking_a_repo.md.erb.yaml
@@ -1,3 +1,9 @@
+---
+title: Picking the Right Repo(s) to start your Open Source Contribution Journey
+description: One of the most important decisions you'll make when you start contributing is which open source libraries you contribute to. This guide will help you get started
+section: im-stuck
+---
+
 Once you've signed up to CodeTriage, the next step is that you find repos to help out.
 
 Many people come thinking that this service sends them a random issue from ANY open source project, but that's not what we do. Why?
