--- a/test/vcr_cassettes/create_repo_without_issues.yml
+++ b/test/vcr_cassettes/create_repo_without_issues.yml
@@ -2,7 +2,7 @@
 http_interactions:
 - request:
     method: get
-    uri: https://api.github.com/repos/chrisccerami/scene-hub-v2/issues?direction=desc&page=1&sort=comments
+    uri: https://api.github.com/repos/chrisccerami/scene-hub-v2/issues?direction=desc&page=1&per_page=100&sort=comments
     body:
       encoding: UTF-8
       string: '{"page":1,"sort":"comments","direction":"desc"}'
@@ -72,7 +72,7 @@ http_interactions:
   recorded_at: Thu, 07 Apr 2016 17:27:00 GMT
 - request:
     method: get
-    uri: https://api.github.com/repos/chrisccerami/scene-hub-v2/issues?direction=desc&page=1&sort=comments&state=open
+    uri: https://api.github.com/repos/chrisccerami/scene-hub-v2/issues?direction=desc&page=1&per_page=100&sort=comments&state=open
     body:
       encoding: UTF-8
       string: '{"state":"open","page":1,"sort":"comments","direction":"desc"}'
