--- a/test/vcr_cassettes/repo_info.yml
+++ b/test/vcr_cassettes/repo_info.yml
@@ -75,7 +75,7 @@ http_interactions:
   recorded_at: Thu, 07 Apr 2016 17:27:43 GMT
 - request:
     method: get
-    uri: https://api.github.com/repos/refinery/refinerycms/issues?direction=desc&page=1&sort=comments
+    uri: https://api.github.com/repos/refinery/refinerycms/issues?direction=desc&page=1&per_page=100&sort=comments
     body:
       encoding: UTF-8
       string: '{"page":1,"sort":"comments","direction":"desc"}'
@@ -3479,7 +3479,7 @@ http_interactions:
   recorded_at: Thu, 07 Apr 2016 17:27:43 GMT
 - request:
     method: get
-    uri: https://api.github.com/repos/refinery/refinerycms/issues?direction=desc&page=1&sort=comments&state=open
+    uri: https://api.github.com/repos/refinery/refinerycms/issues?direction=desc&page=1&per_page=100&sort=comments&state=open
     body:
       encoding: UTF-8
       string: '{"state":"open","page":1,"sort":"comments","direction":"desc"}'
