--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,14 +4,10 @@ on: [push, pull_request]
 jobs:
   base:
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        ruby: ["3.2.9"]
-    name: Running tests with Ruby ${{ matrix.ruby }}
+    name: Tests
     services:
       postgres:
-        image: postgres:12
+        image: postgres:16
         env:
           POSTGRES_DB: triage_test
           POSTGRES_PASSWORD: password
@@ -22,12 +18,11 @@ jobs:
 
     steps:
       - name: Checkout code
-        uses: actions/checkout@v4
+        uses: actions/checkout@v6
 
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: ${{ matrix.ruby }}
           bundler-cache: true
       - name: Linting
         run: |
@@ -40,4 +35,3 @@ jobs:
         run: bin/rake test
       - name: Ensure seed task still works
         run: RAILS_ENV=test bin/rails db:seed
-
